<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--동영상에는 14강 tools:context=".navigation.CommentActivity" 가 있는데 확인 필요함-->

    <!-- 방송 정보 입력하기    -->
    <LinearLayout
        android:id="@+id/input_station"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
    <EditText
        android:id="@+id/et_streamer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_margin="5dp"
        android:hint="@string/streamer_name" />

    <LinearLayout
        android:id="@+id/layout_streamer_explain"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@+id/et_streamer_name"
        android:layout_margin="1dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_streamer_explain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="@string/streamer_explain" />

    </LinearLayout>

    <EditText
        android:id="@+id/et_youtube_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_streamer_explain"
        android:layout_alignParentLeft="true"
        android:layout_margin="5dp"
        android:hint="@string/youtube_address" />

    <EditText
        android:id="@+id/et_afreeca_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_youtube_address"
        android:layout_alignParentLeft="true"
        android:layout_margin="5dp"
        android:hint="@string/afreeca_address" />

    <EditText
        android:id="@+id/et_twitch_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_afreeca_address"
        android:layout_alignParentLeft="true"
        android:layout_margin="5dp"
        android:descendantFocusability="blocksDescendants"
        android:hint="@string/twitch_address" />
    </LinearLayout>
    <!--        android:layout_below="@+id/input_station"-->
    <Button
        android:id="@+id/btn_register"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp"
        android:descendantFocusability="blocksDescendants"
        android:text="@string/register"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>